# sonic-practice

./: CMakeLists.txt
src/: main.cpp
src/md_tools/: code.cpp  code.hpp  md_tools.hpp  rom.cpp  rom.hpp  types.hpp
src/patches/: common_gui.cpp  common_gui.h  game_patch.hpp  game_patch_s3k.cpp  game_patch_s3k.hpp  game_patch_s3k_main_menu.cpp  game_patch_s3k_play_menu.cpp
src/tools/: bitstream_reader.hpp  bitstream_writer.hpp  stringtools.hpp
src/ui/: engine.cpp  engine.hpp  info.cpp  info.hpp  position.hpp  selectable.hpp  selection_mapping.hpp  string.cpp  string.hpp  text.cpp  text.hpp  ui_info.hpp  ui_string.cpp  vertical_menu.cpp  vertical_menu.hpp
